--- a/src/app/orders/Orders.css
+++ b/src/app/orders/Orders.css
@@ -11,7 +11,7 @@
 }
 
 .orders-container {
-  @apply flex flex-col gap-10 mx-28 my-10 bg-white rounded-2xl shadow-lg overflow-hidden p-4;
+  @apply flex flex-col gap-10 p-4 my-10 overflow-hidden bg-white shadow-lg mx-28 rounded-2xl;
 
   .nav-breadcrumbs {
     @apply px-6 pt-6;
@@ -35,7 +35,7 @@
       @apply flex flex-row items-center gap-3;
 
       & figure {
-        @apply object-cover w-12 h-12 overflow-hidden bg-slate-50 rounded-full shadow-md;
+        @apply object-cover w-12 h-12 overflow-hidden rounded-full shadow-md bg-slate-50;
 
         & img {
           @apply object-contain w-full h-full duration-200;
@@ -63,10 +63,10 @@
   }
 
   .orden-container {
-    @apply w-full h-full flex flex-col gap-14 p-6;
+    @apply flex flex-col w-full h-full p-6 gap-14;
 
     .orden-card {
-      @apply flex flex-col p-5 gap-5 bg-slate-50 shadow-md rounded-lg;
+      @apply flex flex-col gap-5 p-5 rounded-lg shadow-md bg-slate-50;
 
       .orden-info-container {
         @apply flex flex-row items-center justify-between gap-4 border-b pb-4 border-[#DABEB6];
@@ -104,12 +104,16 @@
 
           .orden-pago-completado {
             @apply flex flex-row items-center gap-1 text-[#7A8D9B] text-base font-normal duration-200;
+
+            .icon-completado {
+              @apply cursor-help;
+            }
           }
         }
 
         .orden-button-container {
           & a {
-            @apply relative flex flex-row justify-center items-center gap-3 px-4 py-3 rounded-lg duration-200 overflow-hidden;
+            @apply relative flex flex-row items-center justify-center gap-3 px-4 py-3 overflow-hidden duration-200 rounded-lg;
 
             & p {
               @apply text-base text-[#143146] font-medium duration-200;
@@ -141,6 +145,16 @@
           }
         }
       }
+
+      .orden-total {
+        .orden-total-pendiente {
+          @apply text-[#ee2130] text-base font-medium;
+        }
+
+        .orden-total-completado {
+          @apply text-[#2d638b] text-base font-medium;
+        }
+      }
       .orden-details {
         .orden-summary {
           @apply flex flex-row items-center gap-2 text-base text-[#2d638b] font-normal p-2 rounded-lg duration-200 cursor-pointer;
@@ -168,9 +182,9 @@
           @apply flex flex-wrap justify-around gap-5 p-4;
 
           .card-order-item {
-            @apply bg-white shadow-md rounded-lg overflow-hidden;
+            @apply relative pb-10 overflow-hidden bg-white rounded-lg shadow-md;
             & a {
-              @apply flex flex-col w-52 items-start gap-3 pb-2;
+              @apply flex flex-col items-start gap-3 pb-2 w-52;
 
               & figure {
                 @apply object-cover w-full h-40 overflow-hidden border-b border-[#DABEB6];
@@ -185,6 +199,10 @@
             }
             .item-price {
               @apply text-base w-full text-[#0d1d29] font-semibold duration-200 p-2;
+            }
+
+            .item-count {
+              @apply absolute bottom-0 right-0 text-base w-full text-[#2d638b] font-normal duration-200 p-2;
             }
 
             &:hover {
@@ -214,7 +232,7 @@
   @media (max-width: 952px) {
   }
   @media (max-width: 858px) {
-    @apply mx-4 p-0 gap-6;
+    @apply gap-6 p-0 mx-4;
     .orden-container {
       @apply p-3;
       .orden-card {
@@ -280,7 +298,7 @@
     }
   }
   @media (max-width: 768px) {
-    @apply mx-0 p-0 pb-6;
+    @apply p-0 pb-6 mx-0;
 
     .orden-container .orden-card {
       .orden-info-container {
