--- a/src/components/CategoryCards/CategoryCards.css
+++ b/src/components/CategoryCards/CategoryCards.css
@@ -1,16 +1,35 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
 .categoryDiv {
   @apply flex flex-col items-start gap-3 w-[80%];
 
+  .cards-container {
+    @apply flex flex-col w-full gap-3 p-3 bg-white shadow-md rounded-xl;
+  }
+
+  .button-category {
+    @apply flex flex-row items-center justify-center w-full p-3 bg-[#265274] shadow-md rounded-xl text-lg text-[#eee0dd] duration-200;
+
+    &:hover {
+      @apply bg-[#2d638b];
+    }
+  }
+
   .cards-category-container {
-    @apply flex items-center justify-evenly flex-wrap gap-3 bg-white p-3 shadow-md w-full h-auto rounded-xl;
+    @apply flex flex-wrap items-center w-full h-auto gap-3 justify-evenly rounded-xl;
   }
 
   .card-category-container {
-    @apply flex flex-col items-center ;
+    @apply flex flex-col items-center;
 
     & img {
       @apply rounded-[2rem] duration-150 shadow-md hover:scale-105;
